parser/tests/bad/ref02-2.st
% identifier 'x' is a 'subprogram', cannot be used as reference
%   array subscript reference

procedure p(i: int)
  % empty
end p

p[1] := 1
